完成了一码多菜评分，打印评分码页面尚未完成;即将分离服务与菜品，绑定桌号

--- a/catering_system/static/cms/css/score_all.css
+++ b/catering_system/static/cms/css/score_all.css
@@ -45,8 +45,17 @@
     height: 50%;
     border-right: #aaaaaa 3px solid;
 }
+.min-data-div2 {
+    margin-top: 1em;
+    height: 50%;
+    border-left: #aaaaaa 3px solid;
+}
 
 .main-score-data table {
+    width: 95%;
+    margin: 2em;
+}
+.server-suggest-div table {
     width: 95%;
     margin: 2em;
 }
@@ -66,6 +75,10 @@
     height: 150px;
     text-align: center;
     font-size: 13px;
+}
+
+.server-suggest-div{
+    height: 400px;
 }
 
 .chef-title {
