--- a/catering_system/templates/cms/score_all.html
+++ b/catering_system/templates/cms/score_all.html
@@ -3,7 +3,7 @@
     评分汇总
 {% endblock %}
 {% block head %}
-        {% include "common/_ecahrts.html" %}
+    {% include "common/_ecahrts.html" %}
 
     <link rel="stylesheet" href="{{ static('cms/css/score_all.css') }}">
     <script src="{{ static('cms/js/score_all.js') }}"></script>
@@ -31,17 +31,17 @@
                     <div>
                     </div>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-6">
                     <div class="menu-title">菜名</div>
                     <div class="main-score-data table-responsive">
                         <table class="table table-hover mb-0" id="score_table">
                             <thead>
                             <tr>
                                 <th class="th1">序号</th>
-                                <th class="th1">色</th>
-                                <th class="th1">香</th>
-                                <th class="th1">味</th>
-                                <th class="th2">建议</th>
+                                <th class="th1">菜品评分</th>
+                                {#                                <th class="th1">服务评分</th>#}
+                                {#                                <th class="th1">味</th>#}
+                                {#                                <th class="th2">建议</th>#}
                                 <th class="th3">时间</th>
                             </tr>
                             </thead>
@@ -50,6 +50,37 @@
                         </table>
                     </div>
                 </div>
+                <div class="col-md-4 min-data-div2">
+                    <div>
+                        <div class="server-suggest-div" id="server-suggest_div">
+                            <div class="chef-title">服务及建议</div>
+                            <div id="server-suggest">
+                                <table class="table table-hover mb-0" id="server">
+                                    <thead>
+                                    <tr>
+                                        <th class="th1">序号</th>
+                                        <th class="th1">服务评分</th>
+                                        {#                                <th class="th1">服务评分</th>#}
+                                        {#                                <th class="th1">味</th>#}
+                                        <th class="th2">建议</th>
+                                        <th class="th3">时间</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody id="tb">
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
+                        <div class="echart-div">
+                            <div id="table-num" style="height: 100%"></div>
+                        </div>
+                    </div>
+                    <div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
