--- a/catering_system/templates/cms/cms_base.html
+++ b/catering_system/templates/cms/cms_base.html
@@ -295,12 +295,17 @@
                     class="menu-livicon" data-icon="thumbnails-big"></i><span>厨师管理</span></a>
 
             </li>
+
+             <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="{{ url_for('cms.chefscoreall') }}"><i
+                    class="menu-livicon" data-icon="notebook"></i><span>厨师评分</span></a>
+
+            </li>
             <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="{{ url_for('cms.scoreall') }}"><i
-                    class="menu-livicon" data-icon="notebook"></i><span>评分管理</span></a>
+                    class="menu-livicon" data-icon="notebook"></i><span>菜品/服务评分</span></a>
 
             </li>
 
-            <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="#"><i
+            <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="{{ url_for('cms.others') }}"><i
                     class="menu-livicon" data-icon="morph-folder"></i><span>其他</span></a>
 
             </li>
