完成厨师单独统计，准备第一次部署

--- a/catering_system/templates/cms/cms_base.html
+++ b/catering_system/templates/cms/cms_base.html
@@ -297,7 +297,7 @@
             </li>
 
              <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="{{ url_for('cms.chefscoreall') }}"><i
-                    class="menu-livicon" data-icon="notebook"></i><span>厨师评分</span></a>
+                    class="menu-livicon" data-icon="notebook"></i><span>厨师/菜品评分</span></a>
 
             </li>
             <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="{{ url_for('cms.scoreall') }}"><i
