--- a/catering_system/templates/cms/chef_score_all.html
+++ b/catering_system/templates/cms/chef_score_all.html
@@ -11,7 +11,6 @@
 
 {% endblock %}
 {% block main_content %}
-
     <div class="row score-row">
         <div class="col-md-2">
             <div class="col-div min-col-div">
@@ -43,7 +42,7 @@
 {#            </div>#}
         </div>
         <div class="col-md-9 col-div">
-            <div id="test" style="height: 100%">
+            <div id="test" style="height: 100%;min-height: 600px">
             </div>
         </div>
 
