--- a/catering_system/templates/cms/login.html
+++ b/catering_system/templates/cms/login.html
@@ -144,4 +144,48 @@
 <script type="text/javascript" src="../../static/cms/login/js/login.js"></script>
 
 </body>
+
+<script>
+    //平台、设备和操作系统
+    var system = {
+        win: false,
+        mac: false,
+        xll: false,
+        ipad: false
+    };
+    //检测平台
+    var p = navigator.platform;
+    system.win = p.indexOf("Win") == 0;
+    system.mac = p.indexOf("Mac") == 0;
+    system.x11 = (p == "X11") || (p.indexOf("Linux") == 0);
+    system.ipad = (navigator.userAgent.match(/iPad/i) != null) ? true : false;
+
+    //跳转语句，如果是手机访问就自动跳转到wap.baidu.com页面
+    function loadStyle(url) {
+        var link = document.createElement('link');
+        link.type = 'text/css';
+        link.rel = 'stylesheet';
+        link.href = url;
+        var head = document.getElementsByTagName('head')[0];
+        head.appendChild(link);
+    }
+
+    if (system.win || system.mac || system.xll || system.ipad) {
+        {#alert("在PC端上打开的");#}
+
+
+        loadStyle('../../static/cms/css/pc.css')//加载指定css文件的路径
+
+
+    } else {
+
+        loadStyle('../../static/cms/css/mobile.css')//加载指定css文件的路径
+        var ua = navigator.userAgent.toLowerCase();
+        if (ua.match(/MicroMessenger/i) == "micromessenger") {
+            alert("在手机端微信上打开的");
+        } else {
+            alert("在手机上非微信上打开的");
+        }
+    }
+</script>
 </html>
