--- a/catering_system/templates/cms/menulist.html
+++ b/catering_system/templates/cms/menulist.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">权重</span>
+                            <span class="input-group-text" id="basic-addon1">编号</span>
                         </div>
                         <input name="weighted_value" type="text" class="form-control" placeholder="3位数编号,数值越小，显示越靠前"
                                aria-label="Username"
