--- a/catering_system/templates/cms/score_all.html
+++ b/catering_system/templates/cms/score_all.html
@@ -73,7 +73,7 @@
 
                         <div class="echart-div">
                             <div class="row" id="table-num" style="height: 100%">
-                                <div class="col-md-6">
+                                <div class="col-md-6 server-echarts-div">
 
                                     <div style="height: 100%" id="server-echarts"></div>
                                 </div>
@@ -143,8 +143,6 @@
         </div>
     </div>
 
-
-
     <!-- Modal -->
     <div class="modal fade " id="add-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
          aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -191,5 +189,8 @@
             </div>
         </div>
     </div>
+
+
+
 
 {% endblock %}
