--- a/catering_system/templates/front/score.html
+++ b/catering_system/templates/front/score.html
@@ -67,7 +67,7 @@
 </div>
 {% for menu in menus %}
     <div class="main-div row menu-score-div">
-        <div class="col-1"></div>
+{#        <div class="col-1"></div>#}
         <div class="title-div col-4">{{ menu.menu_name }}:</div>
         <div class="myapp-score col-7">
             <div id="score{{ loop.index }}"></div>
@@ -81,7 +81,7 @@
 
 
 <div class="main-div row">
-    <div class="col-1"></div>
+{#    <div class="col-1"></div>#}
     <div class="title-div col-4">服务:</div>
     <div class="myapp-score col-7">
         <div id="score0"></div>
